18 Januari 2007: Wouter
	- Created 3.0.4 release tag.
	- 3.0.5 number in trunk.
	- add nsd.spec patch from Farkas Levente to contrib.

11 Januari 2007: Wouter
	- The message 'server .. closed cmd channel' is now priority INFO.
	  This to reduce the 'error' amount in the logs.
	- On error in a tcp request, set to retry next instead of waiting
	  for the tcp timeout.

9 Januari 2007: Wouter
	- TSIG acl matching changed so that NOKEY allow-notify entries match 
	  only queries without a tsig. Otherwise NSD would crash.
	  This only affects servers that have allow-notify: ip NOKEY and
	  someone sends a TSIG signed notify from that ip.
	- test package for that.
	- Fix for reply to notify messages with ANCOUNT wrong. The ack
	  to notify messages that passed the ACL, and had a SOA in the answer
	  section of the query, included wrong RR counts in the header.
	- test package for notify reply wireformat.

8 Januari 2007: Wouter
	- ipc_send_blocked will not lead to busy waiting on it, but will block
	  in select, until SOA_END comes by.
	- server_main sends SOA_END if reload crashes, to xfrd. So that xfrd
	  can set ipc_blocked=0 and can_send_reload=1; and thus resume service,
	  assuming that the crash was a temporary condition. 
	  This will lead to trying every reload-timeout seconds to reload
	  if it is a permanent condition. Which is more obvious to the 
	  operator.
	- put the error "error: diff: RR ns.kiev.ua. already exists" in
	  debug mode only. Zone transfers with this error are liberally
	  accepted, and we should not spam the logfile.
	- empty zones will not be retried forever every 10 seconds,
	  but exponential backoff to a max of every 4 hours.
	  The exact value is randomised to spread out attempts.

5 Januari 2007: Wouter
	- Fixed --zonesdir=<path> for configure. The value did not get used
	  as a default value. Now it is used as a default value. If a 
	  default value is set for zonesdir, you can go to a 'no value 