@@ -417,17 +417,19 @@ static rrtype_descriptor_type rrtype_descriptors[RRTYPE_DESCRIPTORS_LENGTH] = {
 	/* larger type numbers */
 	{ TYPE_NSEC3, "NSEC3", T_NSEC3, 5, 5,
 	  { RDATA_WF_BYTE, /* hash type */
-	    RDATA_WF_24BIT, /* iterations and opt-out */
+	    RDATA_WF_BYTE, /* flags */
+	    RDATA_WF_SHORT, /* iterations */
 	    RDATA_WF_BINARYWITHLENGTH, /* salt */
 	    RDATA_WF_BINARYWITHLENGTH, /* next hashed name */
 	    RDATA_WF_BINARY /* type bitmap */ },
-	  { RDATA_ZF_BYTE, RDATA_ZF_24BIT, RDATA_ZF_HEX_LEN, RDATA_ZF_BASE32, 
-	    RDATA_ZF_NSEC } },
+	  { RDATA_ZF_BYTE, RDATA_ZF_BYTE, RDATA_ZF_SHORT, RDATA_ZF_HEX_LEN, 
+	    RDATA_ZF_BASE32, RDATA_ZF_NSEC } },
 	{ TYPE_NSEC3PARAM, "NSEC3PARAM", T_NSEC3PARAM, 3, 3,
 	  { RDATA_WF_BYTE, /* hash type */
-	    RDATA_WF_24BIT, /* iterations and opt-out */
+	    RDATA_WF_BYTE, /* flags */
+	    RDATA_WF_SHORT, /* iterations */
 	    RDATA_WF_BINARYWITHLENGTH /* salt */ },
-	  { RDATA_ZF_BYTE, RDATA_ZF_24BIT, RDATA_ZF_HEX_LEN } },
+	  { RDATA_ZF_BYTE, RDATA_ZF_BYTE, RDATA_ZF_SHORT, RDATA_ZF_HEX_LEN } },
 };
 
 rrtype_descriptor_type *
